<?xml version="1.0"?>
<package format="3">
  <name>vn100_reader</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for VectorNav VN-100 IMU (YPR + YPR rate)</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Python dependencies (not ROS packages) -->
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

